Added filter on characters
